# anki-cloud-sync

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  IDEAS.md  README.md  TODO.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/decisions/: 0001-record-architecture-decisions.md  0002-use-user-owned-cloud-storage-for-deck-data.md  0003-fork-rust-ankitects-sync-server.md  0006-use-google-drive-as-the-primary-storage-backend.md  0009-use-sqlite-for-persistent-storage.md  0010-rust-sync-server-exposes-internal-sidecar-for-collection-mutations.md  0011-use-stateless-horizontally-scalable-sync-server-architecture-with-per-request-db-lookups.md  0012-use-sqlite-for-mvp-with-turso-migration-path-for-multi-node-horizontal-scaling.md  0013-require-sticky-sessions-for-sync-server-correctness.md  0014-introduce-sync-platform-api-boundary.md
docs/research/: Anki-sync-protocol.md  Google-Drive-API-connectivity.md  sync-server-collection-cache-and-horizontal-scaling.md
docs/tests/: e2e-testing-gdrive-sync.md  e2e-testing-sync-password-and-anki-desktop.md
rslib/: Cargo.toml
rslib/src/sync/collection/: tests.rs
rslib/src/sync/http_server/: handlers.rs  internal_handlers.rs  internal_server.rs  mod.rs  user.rs
rslib/sync/: Cargo.toml  main.rs
scripts/: fork-anki-sync-server.zsh  smoke-test.sh
sync-platform-api/: Cargo.toml
sync-storage-api/: Cargo.toml
sync-storage-api/src/: lib.rs
sync-storage-backends/: Cargo.toml
sync-storage-backends/src/: lib.rs
sync-storage-backends/src/backends/: google_drive.rs  local.rs  mod.rs
sync-storage-config/: Cargo.toml
sync-storage-config/src/: lib.rs
sync-storage-server/: Cargo.toml
sync-storage-server/src/: auth.rs  handlers.rs  lib.rs  resolver.rs  sidecar.rs
