[package]
name = "sync-storage-backends"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
sync-storage-api = { path = "../sync-storage-api" }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "time"] }
bytes = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
