[package]
name = "sync-storage-config"
version = "25.9.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
aes-gcm = { workspace = true }
bcrypt = { workspace = true }
anyhow = { workspace = true }
data-encoding = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
